--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,34 +1,50 @@
 <index.html>
+<html lang="en">
 <head>
 <meta chargeset="UtF-8">
 <meta name="viewport"content="width=devi-width. inital-scale1">
 <title>Today'sData<title>
-<meta name="geo.region" content="KH">
-<title>Rathana phone Shop1 in  Phnom Penh </title>
-<meta http-equiv="X-UA-Compatible" content="IE=edge"><script type="text/javascript">(window.NREUM||(NREUM={})).init={ajax:{deny_list:["bam.nr-data.net"]}};(window.NREUM||(NREUM={})).loader_config={licenseKey:"1e7946724e",applicationID:"31671751"};;(()=>{var e,t,r={8768:(e,t,r)=>{"use st"}
+<meta name="geo.region" content=
+<title> </title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge"><script type="text/javascript">(window.NREUM||(NREUM={})).init={ajax:{deny_list:["bam.nr-data.net"]}};(window.NREUM||(NREUM={})).loader_config={licenseKey:"1e7946724e",applicationID:"31671751"};;(()=>{var e,t,r={}
 <!-- Google Tag Manager -->
 
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+<script> (function (w,d,s,1,i) (w[1]-[1]|| [];w[1].push({'gtm.start':
 
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+-new Date().getTime(), event: 'gtm.js'));var f=d.getElementsByTagName(s)[0],
 
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+j=d.createElement(s),dl=l!='dataLayer'?'1='+1:;j.async=true;j.src=
 
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore (3,f):
 
-})(window,document,'script','dataLayer','GTM-T5M4CWT');</script>
+-})(window,document, 'script', 'dataLayer', 'G-ZFDZXNBY1D');</script>
 
 <!-- End Google Tag Manager -->
+</nav>
+      </div>
+<title>google analytics</title>
+</head>
 
-<html analytics GA4>
-  <body>
-<!-- Google Tag Manager (noscript) -->
+<body>
+<!-- Google Tag Manager (noscript)--> <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=G-ZFDZXNBY1D')" -height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -- End Google Tag Manager (noscript) -->
+body>
 
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T5M4CWT"
+</html>
 
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
-<!-- End Google Tag Manager (noscript) -->
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -42,7 +58,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
    
- 
+
 
 
     
