--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,7 +4,7 @@
 <meta chargeset="UtF-8">
 <meta name="viewport"content="width=devi-width. inital-scale1">
 <title>Today'sData<title>
-<meta name="geo.region" content=kh
+<meta name="geo.region" content=
 <title>https rathanaphonwebsitecoin </title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"><script type="text/javascript">(window.NREUM||(NREUM={})).init={ajax:{deny_list:["
 <!-- Google Tag Manager -->
@@ -17,7 +17,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'1='+1:;j.async=true;j.src=
 
 https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore (3,f):
 
--})(window,document, 'script', 'dataLayer', 'G-ZFDZXNBY1D');</script>
+-})(window,document, 'script', 'dataLayer', 'G-P08HKS4NF3');</script>
 
 <!-- End Google Tag Manager -->
 </nav>class="navbar navbar-expand-lg bg-primary navbar-dark">-
@@ -27,8 +27,15 @@ https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore (3,f
 </head>
 
 <body>
-<script="https://cdn.jdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js
-<!-- Google Tag Manager (noscript)--> <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=G-ZFDZXNBY1D')" -height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -- End Google Tag Manager (noscript) -->
+<script="https://cdn.jdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap
+.bundle.min.jscrossorigin="anonymous</script
+<- Google Tag Manager (noscript)-->>
+
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=G-P08HKS4NF3" height="0" width="
+
+style="display:none;visibility:hidden"></iframe></noscript>
+
+<!-- End Google Tag Manager (noscript)---|
 body>
 
 </html>
